fix display of task placeholder button
this hides the placeholder button in the tab bar, avoiding issues where
it would sometimes make the overlaid button look blurry

--- a/css/tabBar.css
+++ b/css/tabBar.css
@@ -236,6 +236,10 @@ body.dark-mode #overlay {
 
 /* buttons */
 
+.navbar-action-button.invisible {
+	visibility: hidden;
+}
+
 .navbar-action-button {
 	padding: 1em;
 }
